unpackaged/main/default/objects/Adresse_de_la_demande_de_devis__c/Adresse_de_la_demande_de_devis__c.object-meta.xml
<CustomObject>
    <label>Adresse de la demande de devis</label>
    <nameField>
        <displayFormat>A-D-Devis-{0000}</displayFormat>
        <label>N° de l&#39;enregistrement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adresses de la demande de devis</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>