unpackaged/main/default/objects/Adresse_de_la_demande_de_devis__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <defaultValue>&#39;Inchangé&#39;</defaultValue>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ajout de point</fullName>
            </value>
            <value>
                <fullName>Inchangé</fullName>
                <default>true</default>
                <label>Inchangé</label>
            </value>
            <value>
                <fullName>Modification de point</fullName>
            </value>
            <value>
                <fullName>Suppression de point</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>