unpackaged/main/default/objects/Adresse_de_la_demande_de_devis__c/fields/Demande_de_devis__c.field-meta.xml
<CustomField>
    <fullName>Demande_de_devis__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demande de devis</label>
    <referenceTo>Demande__c</referenceTo>
    <relationshipLabel>Adresses de la demande de devis</relationshipLabel>
    <relationshipName>Adresses_de_la_demande_de_devis</relationshipName>
    <type>Lookup</type>
</CustomField>