unpackaged/main/default/objects/Adresse_de_la_demande_de_devis__c/fields/Heure_de_fin__c.field-meta.xml
<CustomField>
    <fullName>Heure_de_fin__c</fullName>
    <label>Heure de fin</label>
    <type>Time</type>
</CustomField>