unpackaged/main/default/objects/Adresse_de_la_demande_de_devis__c/fields/Heure_de_passage_souhaite__c.field-meta.xml
<CustomField>
    <fullName>Heure_de_passage_souhaite__c</fullName>
    <label>Heure de passage souhaité</label>
    <type>Time</type>
</CustomField>