unpackaged/main/default/objects/Adresse_de_la_demande_de_devis__c/fields/Jours__c.field-meta.xml
<CustomField>
    <fullName>Jours__c</fullName>
    <defaultValue>&quot;LMMJV&quot;</defaultValue>
    <label>Jours</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>MA</fullName>
            </value>
            <value>
                <fullName>ME</fullName>
            </value>
            <value>
                <fullName>J</fullName>
            </value>
            <value>
                <fullName>V</fullName>
            </value>
            <value>
                <fullName>S</fullName>
            </value>
            <value>
                <fullName>LMMJV</fullName>
            </value>
            <value>
                <fullName>LMMJVS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>