unpackaged/main/default/objects/Adresse_de_la_demande_de_devis__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Création</fullName>
                <default>true</default>
                <label>Création</label>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Suppression</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>