unpackaged/main/default/objects/Adresse_de_la_demande_de_devis__c/validationRules/action_peut_pas_changee_suppression.validationRule-meta.xml
<ValidationRule>
    <fullName>action_peut_pas_changee_suppression</fullName>
    <active>true</active>
    <description>Le champ Action ne peut pas être modifié dans le cadre d&#39;une demande de devis pour une suppression de prestation existante</description>
    <errorConditionFormula>ISCHANGED(Action__c ) &amp;&amp;  ISPICKVAL( Demande_de_devis__r.Type_de_demande__c , &quot;Suppression d&#39;une prestation existante&quot;) &amp;&amp;  $User.Tech_By_Pass_VR__c = false</errorConditionFormula>
    <errorDisplayField>Action__c</errorDisplayField>
    <errorMessage>Merci de ne pas modifier l&#39;action dans le cadre d&#39;une demande de devis pour une suppression de prestation existante</errorMessage>
</ValidationRule>