unpackaged/main/default/objects/Adresse_de_la_demande_de_devis__c/validationRules/Statut_de_la_demande_different_de_nouvel.validationRule-meta.xml
<ValidationRule>
    <fullName>Statut_de_la_demande_different_de_nouvel</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISPICKVAL (Demande_de_devis__r.Statut__c,&quot;Nouvelle&quot;) )
&amp;&amp;
 $User.Tech_By_Pass_VR__c = false</errorConditionFormula>
    <errorMessage>Merci de ne pas modifier les adresses de la demande de devis.</errorMessage>
</ValidationRule>